--- a/m3prog_project/public/03/views/home.html
+++ b/m3prog_project/public/03/views/home.html
@@ -6,15 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <?php
-    $loggedIn = false;
-    if(isSet($_GET['LoggedIn']))
-    {
-        $LoggedIn=true;
-    include "views/myDashboard.html";
-    }else {
-    include "views/home.html";
-    }
-    ?>
+
+<a href="incHtml.php?LoggedIn=1">Log in</a>
+
 </body>
 </html>
