--- a/m3prog_project/public/03/views/myDashboard.html
+++ b/m3prog_project/public/03/views/myDashboard.html
@@ -6,15 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <?php
-    $loggedIn = false;
-    if(isSet($_GET['LoggedIn']))
-    {
-        $LoggedIn=true;
-    include "views/myDashboard.html";
-    }else {
-    include "views/home.html";
-    }
-    ?>
+<h1>welkom student<br><br></h1>
+<h1>Skill levels<br></h1>
+
+<li>Php: 8<br></li>
+<li>Html: 8<br></li>
+<li>Js: 8<br></li>
+    
 </body>
 </html>
